--- a/src/custom.css
+++ b/src/custom.css
@@ -42,6 +42,14 @@
   margin-left: 0em !important;
 }
 
+
+.svda-question-actions .svda_question_action--separated {
+  display: none;
+}
+
+.sv_q_num {
+  display: none;
+}
   .svd_container .svd_toolbox {
     border: none;
     font-size: 1.17em;
